--- a/appendices/a-Detection algorithm.tex
+++ b/appendices/a-Detection algorithm.tex
@@ -1,4 +1,4 @@
-\chapter{Detection Algorithm}
+\chapter{Event Detection Algorithm}
 \label{app:DetectionAlgorithm}
 
 \begin{lstlisting}[numbers=left]
