--- a/thesis.bib
+++ b/thesis.bib
@@ -215,7 +215,7 @@
 }
 
 @misc{neatsvor, 
-url={https://www.neatsvor.no/produkt/neatsvor-x600/?gclid=CjwKCAiA68ebBhB-EiwALVC-Nm_219gL2gwIMwlOFThWyclecbVDk8_U__2MeXSq1UjYP1-qUZKFShoCUwgQAvD_BwE},
+url={https://www.neatsvor.no/produkt/neatsvor-x600},
 journal={Neatsvor},
 title={Neatsvor X600 Robotstøvsuger},
 year={2022}, 
@@ -230,7 +230,7 @@ year={2021}
 }
 
 @misc{irobot, 
-url={https://www.irobot.no/roomba/i-serien/irobot-roomba-i7-medium-grey?gclid=CjwKCAiA68ebBhB-EiwALVC-NmJGRUtCbDqu4MbGqUzSI7oWI0sUhJ4anoxOmox74QZKRP7F0ozyKBoCuIIQAvD_BwE},
+url={https://www.irobot.no/roomba/i-serien/irobot-roomba-i7-medium-grey},
 title={iRobot® Roomba® i7 Medium Grey},
 journal={Irobot.no}, 
 year={2022} }
@@ -476,8 +476,6 @@ month={Nov}
   publisher={Elsevier}
 }
 
-‌
-
 @misc{roboticvacuumcleaner2021,
     title={Robotic Vacuum Cleaner Market Size, Share | Global Report, 2028},
     author={Fortune Business Insights},
@@ -496,7 +494,7 @@ month={Nov}
 @ARTICLE{wifi_ieee80211,
   author={},
   journal={IEEE Std 802.11-2016 (Revision of IEEE Std 802.11-2012)}, 
-  title={IEEE Standard for Information technology—Telecommunications and information exchange between systems Local and metropolitan area networks—Specific requirements - Part 11: Wireless LAN Medium Access Control (MAC) and Physical Layer (PHY) Specifications}, 
+  title={IEEE Standard for Information technology—Telecommunications and information exchange between systems Local and metropolitan area networks — Specific requirements - Part 11: Wireless LAN Medium Access Control (MAC) and Physical Layer (PHY) Specifications}, 
   year={2016},
   volume={},
   number={},
