--- a/thesis.tex
+++ b/thesis.tex
@@ -24,13 +24,13 @@
 }
 
 
-\title{Private Information Exposed By The Use Of Robot Vacuum Cleaner In Smart Environments}
-\shorttitle{Private Information Exposed By The Use Of RVC In Smart Environments}
+\title{Private Information Exposed by the Use of Robot Vacuum Cleaner in Smart Environments}
+\shorttitle{Private Information Exposed by the Use of RVC in Smart Environments}
 \author{Benjamin Andreas Ulsmåg}
 \shortauthor{B. Ulsmåg}
-\date{CC-BY \ntnuthesisdate}
-
+\date{01.06.2023}
 \addbibresource{thesis.bib}
+
 
 
 \input{glossary.tex} % add glossary and acronym lists before document
