--- a/glossary.tex
+++ b/glossary.tex
@@ -33,3 +33,29 @@ typically printed as an appendix}
 \newacronym{phd}{PhD}{philosophiae doctor}
 \newacronym{CoPCSE}{CoPCSE@NTNU}{Community of Practice in Computer ScienceEducation at NTNU}
 \newacronym{gcd}{GCD}{Greatest Common Divisor}
+\newacronym{IoT}{IoT}{Internet Of Things}
+\newacronym{RVC}{RVC}{Robot Vacuum Cleaner}
+\newacronym{WAN}{WAN}{Wide Area Network}
+\newacronym{Wi-Fi}{Wi-Fi}{Wireless Fidelity}
+\newacronym{WLAN}{WLAN}{Wireless Local Area Network}
+\newacronym{ISP}{ISP}{Internet Service Provider}
+\newacronym{LAN}{LAN}{Local Area Network}
+\newacronym{MAC}{MAC}{Media Access Control}
+\newacronym{NIC}{NIC}{Network Interface Card}
+\newacronym{TLS}{TLS}{Transport Layer Security}
+\newacronym{VPN}{VPN}{Virtual Private Network}
+\newacronym{AP}{AP}{Access Point}
+\newacronym{DHCP}{DHCP}{Dynamic Host Configuration Protocol}
+\newacronym{IP}{IP}{Internet Protocol}
+\newacronym{OSI}{OSI}{Open Systems Interconnection}
+\newacronym{SSID}{SSID}{Service Set Identifier}
+\newacronym{NAT}{NAT}{Network Address Translation}
+\newacronym{AWS}{AWS}{Amazon Web Services}
+\newacronym{DNS}{DNS}{Domain Name System}
+\newacronym{NTP}{NTP}{Network Time Protocol}
+\newacronym{UDP}{UDP}{User Datagram Protocol}
+\newacronym{TCP}{TCP}{Transmission Control Protocol}
+\newacronym{ARP}{ARP}{Address Resolution Protocol}
+\newacronym{FQDN}{FQDN}{Fully Qualified Domain Name}
+\newacronym{SD}{SD}{Standard Deviation}
+\newacronym{IGMP}{IGMP}{Internet Group Management Protocol}
